unpackaged/main/default/objects/Time_Log__c/fields/Billable_Time__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time__c</fullName>
    <formula>VALUE(TEXT(Multiplier__c)) *  Duration_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>