unpackaged/main/default/objects/Time_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>