unpackaged/main/default/objects/Time_Log__c/fields/Contact_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account Name</label>
    <type>Text</type>
</CustomField>