unpackaged/main/default/objects/Time_Log__c/fields/Date_Logged__c.field-meta.xml
<CustomField>
    <fullName>Date_Logged__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Logged</label>
    <type>Date</type>
</CustomField>