unpackaged/main/default/objects/Time_Log__c/fields/Insider_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Insider_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Log Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>