unpackaged/main/default/objects/Time_Log__c/fields/LastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedDateTime</label>
    <type>DateTime</type>
</CustomField>