unpackaged/main/default/objects/Time_Log__c/fields/Multiplier_Reason__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Reason__c</fullName>
    <label>Multiplier Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Office During Business Hours</fullName>
            </value>
            <value>
                <fullName>Requested After 6pm Before 10pm</fullName>
            </value>
            <value>
                <fullName>Weekend Non-Errand</fullName>
            </value>
            <value>
                <fullName>After 10 PM / Before 9 AM</fullName>
            </value>
            <value>
                <fullName>Weekend Errand</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Commission Earned/Not Charging Time</fullName>
            </value>
            <value>
                <fullName>Closing Logbook</fullName>
            </value>
            <value>
                <fullName>Holiday Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>