unpackaged/main/default/objects/Time_Log__c/fields/Override_Multiplier_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Multiplier_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Multiplier Reason</label>
    <type>Checkbox</type>
</CustomField>