unpackaged/main/default/objects/Time_Log__c/fields/ParentLogbookId__c.field-meta.xml
<CustomField>
    <fullName>ParentLogbookId__c</fullName>
    <formula>Case__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentLogbookId</label>
    <type>Text</type>
</CustomField>