unpackaged/main/default/objects/Time_Log__c/fields/Team_Member_Is_Me__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Is_Me__c</fullName>
    <formula>Insider_Team_Member__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Is Me</label>
    <type>Checkbox</type>
</CustomField>