unpackaged/main/default/objects/Time_Log__c/fields/ThisMonth__c.field-meta.xml
<CustomField>
    <fullName>ThisMonth__c</fullName>
    <formula>MONTH(Date_Logged__c) = MONTH(DATEVALUE(NOW())) &amp;&amp; YEAR(Date_Logged__c) = YEAR(DATEVALUE(NOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ThisMonth</label>
    <type>Checkbox</type>
</CustomField>