unpackaged/main/default/objects/Time_Log__c/fields/Type_of_Billing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Billing__c</fullName>
    <label>Type of Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>