unpackaged/main/default/objects/Time_Log__c/validationRules/Only_admin_can_change_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_admin_can_change_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Date_Logged__c ),
DATE(YEAR(Date_Logged__c),MONTH(Date_Logged__c),1) != DATE(YEAR(PRIORVALUE(Date_Logged__c)),MONTH(PRIORVALUE(Date_Logged__c)),1),
$Profile.Name != "System Administrator")</errorConditionFormula>
    <errorDisplayField>Date_Logged__c</errorDisplayField>
    <errorMessage>You can only change the date to be within the same month. Please contact an admin to change it to a different month.</errorMessage>
</ValidationRule>